# Listo

./: Dockerfile  LICENSE  setup.cfg
.github/workflows/: docker-image-release.yml
src/listo/: __init__.py  daemon.py  exception.py  from_cli.py
