[metadata]
name = listo
version = 1.0.0
author = Edel Perez
author_email = edel.perez@outlook.com
description = Listo can send a post to your Discord channel when a new anime episode releases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EdelPerez/Listo
project_urls =
    Bug Tracker = https://github.com/EdelPerez/Listo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.27.1

[options.entry_points]
console_scripts =
    listo = listo.from_cli:run_from_cli

[options.packages.find]
where = src